# System-Programming

lab01p1/: CMakeLists.txt
lab01p1/DrMemory-Test1.exe.8208.000/: missing_symbols.txt  potential_errors.txt  results.txt  suppress.txt
lab01p1/SimpleFunctions/: CMakeLists.txt  SimpleFunctions.c  SimpleFunctions.h
lab01p1/Tests/: CMakeLists.txt  test1.c
lab01p2/: CMakeLists.txt
lab01p2/Dictionary/: CMakeLists.txt  Dictionary.c  Dictionary.h
lab01p2/DrMemory-Test1.exe.7324.000/: potential_errors.txt  results.txt  suppress.txt
lab01p2/Tests/: CMakeLists.txt  Test1.c
lab01p2/doc/: Makefile
lab01p2/doc/css/: labsheet.css
